--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "findup": "^0.1.5",
     "husky": "^0.11.4",
     "mocha": "^2.5.3",
+    "moment": "^2.13.0",
     "postcss": "^5.0.21",
     "postcss-loader": "^0.9.1",
     "react-addons-test-utils": "^15.1.0",
