--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,10 @@
     "rules": {
         "indent": [2, 2, {"SwitchCase": 1}],
         "eol-last": 0,
-        "no-eval": 0
+        "no-eval": 0,
+        "no-debugger": 1,
+        "no-restricted-syntax": 0,
+        "no-underscore-dangle": 0
     },
     settings: {
       import/resolver: {
