--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "antd": "^1.5.0",
+    "blueimp-md5": "^2.3.0",
     "h2o2": "^5.1.0",
     "hapi": "^13.4.1",
     "immutable": "^3.8.1",
